lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:24: error: illegal start of statement
	fina.debut(); = point1
                      ^Lander:25: error: illegal start of statement
	fina.fin(); = point2
                    ^